project(conan-boost-python-test)
cmake_minimum_required(VERSION 3.0)
add_definitions("-std=c++11")

set(CMAKE_NO_SYSTEM_FROM_IMPORTED True)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup(TARGETS)
# conan_basic_setup()

message(STATUS "CMAKE_PROJECT_NAME = ${CMAKE_PROJECT_NAME}")
message(STATUS "TARGETS = ${TARGETS}")
message(STATUS "CONAN_LIBS = ${CONAN_LIBS}")
# target_link_libraries(${CMAKE_PROJECT_NAME} ${CONAN_LIBS})
SET(PYTHON3_EXECUTABLE ${PYTHON3_EXECUTABLE} "~/.pyenv/versions/anaconda3-5.0.1/envs/devel/bin/python")
ENABLE_TESTING()

ADD_SUBDIRECTORY(01-HelloWorld)
ADD_SUBDIRECTORY(02-ExposingClasses)
ADD_SUBDIRECTORY(03-Constructors)
ADD_SUBDIRECTORY(04-ClassMembers)
# ADD_SUBDIRECTORY(05-Inheritance)
# ADD_SUBDIRECTORY(06-VirtualFunctionsInPython)
# ADD_SUBDIRECTORY(07-Operators)
# ADD_SUBDIRECTORY(08-CallPolicies)
# ADD_SUBDIRECTORY(09-Overloading)
# # ADD_SUBDIRECTORY(10-Embedding)
# ADD_SUBDIRECTORY(11-Iterators)
# ADD_SUBDIRECTORY(12-Exceptions)
# # ADD_SUBDIRECTORY(13-AutoInstantiation)
